# flip

./: .bumpversion.cfg  .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: bumpversion.yml  publish-to-pipy.yml  publish-to-pypi.yml  python-package.yml
data/: power_spectrum_tt_log.txt
docs/: DataVector.rst  api.rst  basicusage.rst  conf.py  covariance_method.rst  field_comparison.rst  index.rst  installation.rst  likelihoods.rst  overview.rst  power_spectra.rst  simulation.rst  vel_estimators.rst
docs/api/: flip.covariance.rst
examples/: launch_vv_fit.py
flip/: __init__.py  _config.py  _subpackages.py  fisher.py  fit_utils.py  fitter.py  gridding.py  likelihood.py  model_evaluation.py  plot_utils.py  power_spectra.py  power_spectra_generator.py  utils.py  vectors.py
flip/comparison/: __init__.py  likelihood.py
flip/covariance/: __init__.py  contraction.py  cov_utils.py  covariance.py  fisher.py  fit_utils.py  fitter.py  generator.py  hankel.py  likelihood.py  plot_utils.py  symbolic.py
flip/covariance/adamsblake17/: coefficients.py  fisher_terms.py  flip_terms.py
flip/covariance/adamsblake17plane/: __init__.py  coefficients.py  fisher_terms.py  flip_terms.py  generator.py
flip/covariance/adamsblake20/: __init__.py  coefficients.py  fisher_terms.py  flip_terms.py  flip_terms_lmaxplusone.py
flip/covariance/agkim24/: fisher_terms.py
flip/covariance/analytical/: __init__.py
flip/covariance/analytical/adamsblake17/: __init__.py  flip_terms.py
flip/covariance/analytical/adamsblake17plane/: fisher_terms.py  generator.py
flip/covariance/analytical/adamsblake20/: fisher_terms.py  flip_terms.py
flip/covariance/analytical/carreres23/: generator.py
flip/covariance/analytical/lai22/: coefficients.py  flip_terms.py  generator.py
flip/covariance/analytical/ravouxcarreres/: flip_terms.py
flip/covariance/analytical/ravouxnoanchor25/: coefficients.py
flip/covariance/analytical/ravouxqin26/: __init__.py  coefficients.py  flip_terms.py  spt_model.tex
flip/covariance/analytical/rcrk24/: __init__.py  coefficients.py  fisher_terms.py
flip/covariance/carreres23/: __init__.py  coefficients.py  fisher_terms.py  flip_terms.py  generator.py
flip/covariance/emulators/: __init__.py  generator.py  gpmatrix.py  nnmatrix.py  skgpmatrix.py
flip/covariance/emulators/gpmatrix/: __init__.py  evaluation.py  training.py
flip/covariance/genericzdep/: __init__.py  coefficients.py  flip_terms.py
flip/covariance/lai22/: __init__.py  coefficients.py  fisher_terms.py  flip_terms.py  generator.py  h_terms.py  symbolic.py
flip/covariance/ravouxcarreres/: __init__.py  coefficients.py  fisher_terms.py  flip_terms.py  flip_terms_ab20like.py  flip_terms_lmax.py  flip_terms_mpm.py
flip/covariance/ravouxnoanchor25/: __init__.py  coefficients.py  fisher_terms.py  flip_terms.py
flip/covariance/rcrk24/: __init__.py  coefficients.py  fisher_terms.py  flip_terms.py  main.tex
flip/covariance/rcrk24fs8/: fisher_terms.py  flip_terms.py
flip/covariance_model/: cov_utils.py  covariance.py  model_evaluation.py  symbolic_flip.py
flip/covariance_model/adamsblake20/: flip_terms.py
flip/covariance_model/carreres23/: flip_terms.py  generator.py
flip/covariance_model/lai22/: covariance.py  generator.py  symbolic.py
flip/data/: __init__.py  data_density.parquet  data_velocity.parquet  data_window_density.parquet  density_data.parquet  grid_window_m.parquet  gridding.py  load_data_test.py  load_test_data.py  power_spectrum_mm.txt  power_spectrum_mt.txt  power_spectrum_tt.txt  style.mplstyle  test_cov_refs.json  test_covariance_reference_values.json  test_e2e_reference_values.json  test_e2e_refs.json  velocity_data.parquet
flip/data_vector/: __init__.py  basic.py  cosmo_utils.py  galaxypv_vectors.py  gridding.py  gw_vectors.py  mesh.py  snia_vectors.py  vector_utils.py
flip/data_vectors/: __init__.py  basic.py  snia_vectors.py
flip/fisher/: __init__.py  fisher_matrix.py
flip/forward/: __init__.py  field_utils.py  likelihood.py  sampler.py
flip/forward/flox/: __init__.py  box.py  fourrier_box.py  probabilities.py  sampler.py
flip/forward/simulation/: __init__.py  simulator.py  utils.py
flip/power_spectra/: __init__.py  class_engine.py  cosmoprimo_engine.py  generator.py  models.py  power_spectra_generator.py  pyccl_engine.py
flip/simulation/: __init__.py  cosmo_utils.py  fitter.py  generate.py  generator.py  likelihood.py  painter.py
nb/: fit_density.ipynb  fit_joint.ipynb  fit_velocity.ipynb
notebook/: covariance.ipynb  fisher_density.ipynb  fisher_vel.ipynb  fisher_velocity.ipynb  fit_density.ipynb  fit_joint.ipynb  fit_simulation_velocity.ipynb  fit_velocity-emulator.ipynb  fit_velocity.ipynb  fit_velocity_jax.ipynb  fit_velocity_test_bastien.ipynb  flip_forward.ipynb  flip_mesh.ipynb
notebooks/: simulation_forward_model.ipynb
scripts/: develop.py  flip_compute_correlation_model.py  flip_compute_power_spectra.py  flip_fisher_forecast_velocity.py  flip_fisher_rcrk24.py  flip_launch_minuit_density_fit.py  flip_launch_minuit_full_fit.py  flip_launch_minuit_velocity_fit.py  flip_launch_minuit_velocity_fit_full.py  flip_launch_minuit_velocity_fit_interpolation.py  flip_launch_minuit_vv_fit.py  flip_rcrk24_fisher.py  regenerate_cov_refs.py
test/: conftest.py  develop.py  flip_launch_minuit_velocity_fit_full.py  refresh_reference_values.py  test_covariance_assembly.py  test_covariance_reference_values.py  test_covariance_utils.py  test_e2e_density.py  test_e2e_joint.py  test_e2e_velocity.py  test_likelihood_inversions.py  test_models_coverage.py  test_simulation.py
(+2 files in other folders)
