[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "flipcosmo"
dynamic = ["version"]
authors = [
    {name = "Corentin Ravoux", email = "corentin.ravoux.research@gmail.com"},
    {name = "Bastien Carreres", email = "bastien.carreres@duke.edu"},
]
description = " Field Level Inference Package"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "pandas",
    "numpy",
    "scipy >= 1.12",
    "matplotlib",
    "importlib-metadata",
    "emcee",
    "iminuit",
    "cosmoprimo @ git+https://github.com/cosmodesi/cosmoprimo",
    "astropy",
    "mpmath"
]

[project.urls]
Homepage = "https://github.com/corentinravoux/flip"

[project.optional-dependencies]
docs = [
    "markdown",
    "sphinx >= 5.2.3",
    "sphinx-markdown-tables >= 0.0.15",
    "numpydoc",
    "sphinx_book_theme",
    "myst-parser",
    "sphinx-copybutton",
    "sphinx-design",
    "sphinx-inline-tabs",
    "sphinx-tabs",
    "sphinx-autoapi",
]

[tool.setuptools]
package-dir = { "" = "flip" }

[tool.setuptools.packages.find]
where = ["flip"]
namespaces = true


[tool.setuptools.package-data]
flip = [
    "data/*.txt",
    "data/*.parquet",
    "data/*.mplstyle"
    ]

[project.scripts]
# Continuum fitting
"flip_compute_correlation_model.py" = "flip.bin.flip_compute_correlation_model:main"
"flip_compute_power_spectra.py" = "flip.bin.flip_compute_power_spectra:main"
"flip_fisher_forecast_velocity.py" = "flip.bin.flip_fisher_forecast_velocity:main"
"flip_launch_minuit_density_fit.py" = "flip.bin.flip_launch_minuit_density_fit:main"
"flip_launch_minuit_full_fit.py" = "flip.bin.flip_launch_minuit_full_fit:main"
"flip_launch_minuit_velocity_fit_full.py" = "flip.bin.flip_launch_minuit_velocity_fit_full:main"
"flip_launch_minuit_velocity_fit_interpolation.py" = "flip.bin.flip_launch_minuit_velocity_fit_interpolation:main"
"flip_launch_minuit_velocity_fit.py" = "flip.bin.flip_launch_minuit_velocity_fit:main"
"flip_rcrk24_fisher.py" = "flip.bin.flip_rcrk24_fisher:main"