[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "flipcosmo"
dynamic = ["version"]
authors = [
    {name = "Corentin Ravoux", email = "corentin.ravoux.research@gmail.com"},
    {name = "Bastien Carreres", email = "bastien.carreres@duke.edu"},
]
description = " Field Level Inference Package"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "pandas",
    "numpy",
    "scipy >= 1.12",
    "matplotlib",
    "importlib-metadata",
    "emcee",
    "iminuit",
    "astropy",
    "mpmath"
]

[project.optional-dependencies]
docs = [
    "markdown",
    "sphinx >= 5.2.3",
    "sphinx-markdown-tables >= 0.0.15",
    "numpydoc",
    "sphinx_book_theme",
    "myst-parser",
    "sphinx-copybutton",
    "sphinx-design",
    "sphinx-inline-tabs",
    "sphinx-tabs",
    "sphinx-autoapi",
]

[tool.setuptools.dynamic]
version = {attr = "flip.__version__"}

[tool.setuptools]
package-dir = { "" = "." }

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
flip = [
    "data/*.txt",
    "data/*.json",
    "data/*.parquet",
    "data/*.mplstyle"
    ]

