[metadata]
name = flip
description = Field Level Inference Package
url = https://github.com/corentinravoux/flip
email = corentin.ravoux.research@gmail.com
author = Corentin Ravoux
long_description = file : README.md
license = MIT
classifiers =
    # Trove classifiers
    # Full list: https://pypi.python.org/pypi?%3Aaction=list_classifiers
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy


[options]
packages = find:
python_requires = <3.10
install_requires =
    pandas
    numpy
    scipy
    matplotlib
    importlib-metadata
