[metadata]
name = flip
description = Field Level Inference Package
url = https://github.com/corentinravoux/flip
email = corentin.ravoux.research@gmail.com
author = Corentin Ravoux
long_description = file : README.md
license = MIT


[options]
packages = find:
install_requires =
    pandas
    numpy
    scipy
    matplotlib
    importlib-metadata
    emcee
    iminuit
    cosmoprimo @ git+https://github.com/cosmodesi/cosmoprimo
    astropy

[options.extras_require]
docs =
    markdown
    sphinx >= 5.2.3
    sphinx-markdown-tables >= 0.0.15
    numpydoc
    furo
    myst-parser
    sphinx-copybutton
    sphinx-design
    sphinx-inline-tabs
    sphinx-tabs
    sphinx-autoapi


[options.package_data]
flip = data/*.txt, data/*.parquet, data/*.mplstyle